# mediainfo

./: README.md  build.gradle  settings.gradle  version.gradle
app/: build.gradle
app/src/androidTest/java/com/jay/ffmpeg/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/jay/tiktok/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jay/mediainfo/: FfmpegInfoActivity.kt  ItemAdapter.kt  MainActivity.kt
app/src/main/java/com/jay/tiktok/: MainActivity.kt
app/src/main/res/layout/: activity_ffmpeg_info.xml  activity_main.xml  item_main_view.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/jay/ffmpeg/: ExampleUnitTest.kt
app/src/test/java/com/jay/tiktok/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
internal_base/base/: build.gradle
internal_base/base/src/androidTest/java/com/jay/base/: ExampleInstrumentedTest.java
internal_base/base/src/main/: AndroidManifest.xml
internal_base/base/src/main/java/com/jay/base/: App.kt
internal_base/base/src/test/java/com/jay/base/: ExampleUnitTest.java
media/media/: build.gradle
media/media/src/androidTest/java/com/jay/ffmpeg/: ExampleInstrumentedTest.java
media/media/src/main/: AndroidManifest.xml
media/media/src/main/cpp/: CMakeLists.txt  ffmpeg_codec.cpp  ffmpeg_format.cpp  ffmpeg_format.h  ffmpeg_jni.cpp  ffmpeg_jni.h
media/media/src/main/cpp/include/libavutil/: ffversion.h
media/music/src/main/: AndroidManifest.xml
media/music/src/main/res/layout/: activity_music_list.xml
(+8 files in other folders)
